--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-react-18-fix": "^0.14.1",
+    "react-swipeable-views-utils": "^0.14.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
